--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "backpack/pagemanager": "^1.1",
         "backpack/permissionmanager": "^2.1",
         "backpack/settings": "^2.0",
+        "cviebrock/eloquent-sluggable": "^4.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "venturecraft/revisionable": "^1.28"
